# dollfish

./: .gitignore  Cargo.toml  README.md  compose.yaml
src/: auth_header.rs  main.rs
src/users/: authentication.rs
