[package]
name = "dollfish"
version = "0.1.0"
authors = ["velkee"]
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
reqwest = { version = "0.12.2", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
sysinfo = "0.30.8"
tokio = { version = "1.37.0", features = ["full"] }
toml = "0.8.12"
uuid = { version = "1.8.0", features = ["v4"] }

